fixed spacing

--- a/main.css
+++ b/main.css
@@ -299,7 +299,7 @@ video {
 }
 
 table{
-    width:125%;
+    width:100%;
     margin-top: 3%;
     margin-left: auto;
     margin-right: auto;
